# robodog

./: BOM.csv  JOURNAL.md  README.md
Firmware/ws/ws/log/: latest_list
Firmware/ws/ws/src/leg_walker/: CMakeLists.txt  package.xml
Firmware/ws/ws/src/leg_walker/config/: ik_parameters.yaml
Firmware/ws/ws/src/leg_walker/include/leg_walker/: ik_solver.hpp
Firmware/ws/ws/src/leg_walker/launch/: walk_to_coord.launch.py
Firmware/ws/ws/src/leg_walker/src/: ik_solver.cpp  walk_node.cpp
Firmware/ws/ws/src/servo_driver/: CMakeLists.txt  package.xml
Firmware/ws/ws/src/servo_driver/config/: servo_map.yaml
Firmware/ws/ws/src/servo_driver/include/servo_driver/: pigpio_pwm_controller.hpp
Firmware/ws/ws/src/servo_driver/launch/: servo_driver.launch.py
Firmware/ws/ws/src/servo_driver/src/: pigpio_pwm_controller.cpp  servo_driver_node.cpp
Firmware/ws/ws/src/slam_stereo_picams/: CMakeLists.txt  package.xml
Firmware/ws/ws/src/slam_stereo_picams/config/: stereo_params.yml
Firmware/ws/ws/src/slam_stereo_picams/include/slam_stereo_picams/: stereo_slam_node.hpp
Firmware/ws/ws/src/slam_stereo_picams/launch/: stereo_slam.launch.py
Firmware/ws/ws/src/slam_stereo_picams/src/: stereo_slam_node.cpp
Firmware/ws/ws/src/slam_yplidar_x2/: CMakeLists.txt  package.xml
Firmware/ws/ws/src/slam_yplidar_x2/config/: lidar_params.yml
Firmware/ws/ws/src/slam_yplidar_x2/launch/: yplidar_slam.launch.py
PCB/: sucky schematic.kicad_sch  ~sucky schematic.kicad_sch.lck
