<package format="3">
  <name>leg_walker</name>
  <version>0.1.0</version>
  <description>Quadruped leg inverse kinematics walker</description>
  <maintainer email="daksh.vohra1@gmail.com">Daksh Vohra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
</package>
