<package format="3">
  <name>slam_stereo_picams</name>
  <version>0.1.0</version>
  <description>Stereo SLAM using two PiCams</description>
  <maintainer email="daksh.vohra1@gmail.com">Daksh Vohra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
</package>
